correção no csv

--- a/decisionTreeIris.ipynb
+++ b/decisionTreeIris.ipynb
@@ -217,7 +217,7 @@
         "id": "lVkr99MZIKEq"
       },
       "source": [
-        "X_treino, X_teste, y_treino, y_teste = train_test_split(data.drop('5',axis=1),data['5'],test_size=0.3, stratify=data['5'])"
+        "X_treino, X_teste, y_treino, y_teste = train_test_split(data.drop('class',axis=1),data['class'],test_size=0.3, stratify=data['class'])"
       ],
       "execution_count": 5,
       "outputs": []
@@ -464,7 +464,7 @@
         "dot_data = export_graphviz( \n",
         "         clf, \n",
         "         out_file=None,\n",
-        "         feature_names=data.drop('5',axis=1).columns,\n",
+        "         feature_names=data.drop('class',axis=1).columns,\n",
         "         class_names=['Iris-setosa','Iris-versicolor', 'Iris-virginica'],  \n",
         "         filled=True, rounded=True,\n",
         "         proportion=True,\n",
